# eszip

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  build_npm.ts  deno.json  eszip_wasm.generated.d.ts  eszip_wasm.generated.js  eszip_wasm_bg.wasm  loader.eszip  loader.ts  mod.ts.eszip  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  release.yml
benches/: source_hash_function.rs
eszip-go/: checksum.go  errors.go  eszip  eszip.go  eszip_test.go  go.mod  go.sum  module.go  modulemap.go  v1.go  v2.go  v2_npm.go  v2_parser.go  v2_writer.go
eszip-go/cmd/eszip/: main.go
examples/: build.ts  fetch.rs  loader.eszip  loader.js  loader.rs
examples/chainloading/: bundler.ts
js/: eszip.ts  eszip_test.ts  loader.ts  mod.ts
js/examples/: build_custom.ts
js/examples/chainloading/handlers/: foo.ts
js/examples/chainloading/handlers/bar/: index.ts
js/snippets/sys_traits-c0cdd403b06dc0dc/: inline0.js
lib/: Cargo.toml  Makefile  eszip.ts  eszip_test.ts  eszip_wasm.generated.js  eszip_wasm_bg.wasm  lib.rs  loader.ts  mod.ts
lib/examples/: build_bare_specifiers.ts  build_custom.ts  worker.tsx
lib/examples/chainloading/: bundle.ts  bundler.ts
lib/lib/: eszip_wasm.generated.js  eszip_wasm_bg.wasm
source/: import_map.json
source/Users/divy/gh/eszip_pain/: a.js
source/std/testing/: asserts.ts
source/std@0.132.0/fmt/: colors.ts
source/std@0.132.0/testing/: _diff.ts
src/: error.rs  format.rs  graph.rs  lib.rs  load_modules.rs  loader.rs  main.rs  parse_deps.rs  parser.rs  reqwest_loader.rs  resolve_import.rs  v1.rs  v2.rs  zip.rs
src/examples/: builder.rs  decoder.rs  load.rs  run.rs  viewer.rs
src/snapshots/: eszip__v2__tests__file_format_roundtrippable.snap  eszip__v2__tests__npm_empty_snapshot.snap  eszip__v2__tests__npm_packages.snap  eszip__v2__tests__opaque_data.snap
src/testdata/: eszip.js  issue13704.eszip  json.eszip2  mod.ts  redirect.eszip2
src/testdata/emit/: b.ts  b.ts.map  dynamic.ts  dynamic_data.ts  json.ts  main.ts  main.ts.map
src/testdata/source/: dynamic.ts  external.ts  json.ts
