[package]
name = "eszip"
version = "0.68.2"
authors = ["the Deno authors"]
edition = "2021"
repository = "https://github.com/denoland/eszip"
description = "A utility that can download JavaScript and TypeScript module graphs and store them locally in a special zip file"
license = "MIT"

[workspace]
members = ["lib"]

[workspace.dependencies]
deno_graph = "0.74.0"
import_map = "0.19.1"
serde = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[lib]
name = "eszip"
path = "src/lib.rs"

[[example]]
name = "eszip_builder"
path = "src/examples/builder.rs"

[[example]]
name = "eszip_viewer"
path = "src/examples/viewer.rs"

[dependencies]
anyhow = "1"
base64 = "0.21.0"
deno_ast = { version = "0.38.0", features = ["transpiling"] }
deno_graph = { workspace = true }
deno_npm = "0.18.0"
deno_semver = "0.5.4"
futures = "0.3.26"
hashlink = "0.8.2"
serde = { workspace = true }
serde_json = "1"
sha2 = "0.10.1"
thiserror = "1.0.30"
url = "2.2.2"

[dev-dependencies]
import_map = { workspace = true }
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "rt"] }
reqwest = { version = "0.11.23", features = ["rustls-tls"] }
jsonc-parser = { version = "0.23.0", features = ["serde"] }
insta = "1.34.0"
