[package]
name = "eszip"
version = "0.91.0"
authors = ["the Deno authors"]
edition = "2021"
repository = "https://github.com/denoland/eszip"
description = "A utility that can download JavaScript and TypeScript module graphs and store them locally in a special zip file"
license = "MIT"

[workspace]
members = ["lib"]

[workspace.dependencies]
deno_graph = { version = "0.94.0", default-features = false }
deno_ast = { version = "0.48.0", features = ["transpiling"] }
import_map = "0.22.0"
serde = "1"
deno_error = "0.6.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[lib]
name = "eszip"
path = "src/lib.rs"

[[example]]
name = "eszip_builder"
path = "src/examples/builder.rs"

[[example]]
name = "eszip_viewer"
path = "src/examples/viewer.rs"

[[bench]]
name = "source_hash_function"
harness = false

[features]
xxhash3 = ["xxhash-rust/xxh3"]
sha256 = ["dep:sha2"]
# backwards compatibility. Disabling sha256 will break compatibility with eszips older than v2.2
default = ["sha256"]

[dependencies]
anyhow = "1"
async-trait = "0.1.68"
base64 = "0.21.0"
deno_ast = { workspace = true }
deno_error.workspace = true
deno_graph = { workspace = true }
deno_npm = { version = "0.34.0" }
deno_semver = "0.8.0"
futures = "0.3.26"
hashlink = "0.8.2"
indexmap = "2"
serde = { workspace = true }
serde_json = "1"
sha2 = { version = "0.10.1", optional = true }
thiserror = "2"
url = "2.2.2"
xxhash-rust = { version = "0.8", optional = true }

[dev-dependencies]
import_map = { workspace = true }
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "rt"] }
reqwest = { version = "0.11.23", features = ["rustls-tls"] }
jsonc-parser = { version = "0.23.0", features = ["serde"] }
insta = "1.34.0"
criterion = { version = "0.5", features = ["async_tokio"] }
