[package]
name = "eszip_wasm"
version = "0.0.0"
authors = ["the Deno authors"]
edition = "2021"
description = "A utility that can download JavaScript and TypeScript module graphs and store them locally in a special zip file"
license = "MIT"

[lib]
name = "eszip_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1.7"
deno_error = "0.7.0"
deno_graph = { version = "0.107.0", default-features = false }
eszip = "0.109.0"
getrandom = { version = "*", features = ["js"] }
import_map = "0.24.0"
js-sys = "0.3.69"
futures = "0.3.19"
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "=0.4.42"
serde = "1"
serde-wasm-bindgen = "0.5.0"
web-sys = { version = "=0.3.69", features = ["ReadableStreamByobReader"] }
sys_traits = { version = "=0.1.17", features = ["real", "wasm"] }
