[package]
name = "eszip_wasm"
version = "0.0.0"
authors = ["the Deno authors"]
edition = "2021"
description = "A utility that can download JavaScript and TypeScript module graphs and store them locally in a special zip file"
license = "MIT"

[lib]
name = "eszip_wasm"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1.7"
deno_graph = "0.55.0"
eszip = { path = "../" }
import_map = "0.15.0"
js-sys = { version = "0.3.64" }
futures = "0.3.19"
wasm-bindgen = { version = "=0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "=0.4.37" }
serde-wasm-bindgen = "0.5.0"
web-sys = { version = "=0.3.64", features = ["ReadableStreamByobReader"] }
