[package]
name = "eszip_wasm"
version = "0.0.0"
authors = ["the Deno authors"]
edition = "2021"
description = "A utility that can download JavaScript and TypeScript module graphs and store them locally in a special zip file"
license = "MIT"

[lib]
name = "eszip_wasm"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1.7"
deno_graph = { workspace = true, features = ["wasm_executor"] }
eszip = { path = "../" }
getrandom = { version = "*", features = ["js"] }
import_map = { workspace = true }
js-sys = { version = "0.3.69" }
futures = "0.3.19"
wasm-bindgen = { version = "=0.2.92" }
wasm-bindgen-futures = { version = "=0.4.42" }
serde = { workspace = true }
serde-wasm-bindgen = "0.5.0"
web-sys = { version = "=0.3.69", features = ["ReadableStreamByobReader"] }

